added salary portions

--- a/fms/templatefor/home.html
+++ b/fms/templatefor/home.html
@@ -19,6 +19,14 @@
             {% if user.is_authenticated %}
             <li> Hello, {{user.first_name}}</li>
             <li> <a href="logout">logout</a></li>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <li> <h1> <a href="income">income</a></li> </h1>
+            <li><h1><a href="spend money">spend money</a></li> </h1>
+            <li><h1> <a href="more spending">more spending</a></li> </h1>
             {% else %}
             <li><a href="register"><h2>Register</h2></a></li>
             <li><a href="login"><h2>Login</h2></a></li>
