added available rs

--- a/fms/templatefor/home.html
+++ b/fms/templatefor/home.html
@@ -27,6 +27,9 @@
             <li> <h1> <a href="income">income</a></li> </h1>
             <li><h1><a href="spend money">spend money</a></li> </h1>
             <li><h1> <a href="more spending">more spending</a></li> </h1>
+            
+           
+
             {% else %}
             <li><a href="register"><h2>Register</h2></a></li>
             <li><a href="login"><h2>Login</h2></a></li>
@@ -35,5 +38,9 @@
     </nav>
    
     </center>
+
+    <left> <h1>
+        Available Rs :{{totalincome}}
+        </h1></left>
     </form>
 {% endblock %}
